syntax = "proto2";

import "scalapb/scalapb.proto";
import "v1/attribute.proto";

option (scalapb.options) = {
  package_name: "it.pagopa.pdnd.interop.uservice.attributeregistrymanagement.model.persistence.serializer.v1"
};

message AttributeAddedV1 {
  required AttributeV1 attribute = 1;
}

