syntax = "proto2";

import "scalapb/scalapb.proto";

option (scalapb.options) = {
  package_name: "it.pagopa.interop.attributeregistrymanagement.model.persistence.serializer.v1"
};

import "v1/attribute.proto";


message StateV1 {
  repeated StateEntryV1 attributes = 1;
}

message StateEntryV1 {
  required string key = 1;
  required AttributeV1 value = 2;
}
